--- a/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
+++ b/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
@@ -1,21 +1,48 @@
-
 <div class="card">
   <p-menubar>
     <ng-template #start>
-      <a class="navbar-brand" href="/userbiomedica">AppHusrt</a>
+      <p-button (onClick)="sidebarVisible = true" icon="pi pi-bars" severity="contrast"></p-button>
+      <a class="navbar-brand" href="/userbiomedica" style="margin-left: 15px;"> AppHusrt</a>
     </ng-template>
     <ng-template #item let-item let-root="root">
 
     </ng-template>
     <ng-template #end>
       <div class="flex items-center gap-2">
-        <button type="button" class="btn btn-outline-dark" style="margin: 1px;" (click)="viewUser()">
-          <i class="bi bi-person"></i>
-        </button>
-        <button type="button" class="btn btn-outline-dark" style="margin: 1px;" (click)="navigateToAbout()">
-          <i class="bi bi-box-arrow-right"></i>
-        </button>
+
+        <p-avatar icon="pi pi-user" class="mr-2 profil" shape="circle" (click)="viewUser()" />
+        <p-avatar icon="pi pi-sign-out" class="mr-2 profil" shape="circle" (click)="navigateToAbout()" />
+
       </div>
     </ng-template>
   </p-menubar>
 </div>
+
+<p-sidebar #sidebarRef [(visible)]="sidebarVisible">
+  <ng-template pTemplate="headless">
+    <div class="flex flex-column h-full">
+      <div class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0">
+        <span class="inline-flex align-items-center gap-2">
+
+          <span class="font-semibold text-2xl text-contrast">AppHusrt</span>
+        </span>
+        <span>
+          <p-button type="button" severity="contrast" (onClick)="closeCallback($event)" icon="pi pi-times"
+            rounded="true" outlined="true" styleClass="h-2rem w-2rem"></p-button>
+        </span>
+      </div>
+      <div>
+
+      </div>
+      <div class="mt-auto">
+        <hr class="mb-3 mx-3 border-top-1 border-none surface-border" />
+        <a pRipple
+          class="m-3 flex align-items-center cursor-pointer p-3 gap-2 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
+          <p-avatar icon="pi pi-user" size="large" shape="circle" (click)="viewUser()" />
+          <span class="font-bold">Perfil</span>
+        </a>
+      </div>
+    </div>
+  </ng-template>
+
+</p-sidebar>
