--- a/src/app/Components/Homepage/homeintranet/homeintranet.component.html
+++ b/src/app/Components/Homepage/homeintranet/homeintranet.component.html
@@ -1,4 +1,3 @@
-<app-biomedicausernavbar></app-biomedicausernavbar>
 <div style="margin-top: 3%; margin-left: 5%; margin-right: 5%; background-color: white;">
 </div>
 
@@ -11,7 +10,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-inboxes-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewInventarioBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
@@ -23,7 +22,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-gear-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewMantenimientoBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
@@ -35,7 +34,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-stoplights" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewSemaforizacionBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
@@ -47,7 +46,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-bar-chart-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewIndicadoresBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
@@ -59,7 +58,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-calendar-week" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewCalendarioBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
@@ -71,7 +70,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
           <i class="bi bi-stopwatch-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
         </div>
-        <button type="button" class="btn btn-dark" (click)=showViewMantenimientoBio()>INGRESAR</button>
+        <button type="button" class="btn btn-dark">INGRESAR</button>
       </div>
     </div>
   </div>
