--- a/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.css
+++ b/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.css
@@ -21,3 +21,24 @@
   margin-right: 5%;
   align-content: center;
 }
+
+
+
+    .contenedor {
+      display: flex;
+      width: 100%;
+      height: 200px;
+    }
+
+    .izquierda {
+      width: 20%;
+      align-items: center;
+      text-align: center;
+    }
+
+    .derecha {
+      width: 80%;
+      background-color: #f8d7da;
+      align-items: center;
+      text-align: center;
+    }
