--- a/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.html
+++ b/src/app/Components/userBiomedica/mantenimineto/mantenimineto.component.html
@@ -6,7 +6,6 @@
   <h1 style="text-align: center;">MANTENIMIENTOS DE EQUIPOS BIOMEDICOS</h1>
 </div>
 
-
 <div class="filtromes flex flex-column md:flex-row align-items-center gap-3" style="margin-bottom: 2%;">
   <h6 class="m-0">Seleccione un mes para visualizar:</h6>
 
@@ -18,15 +17,22 @@
   </button>
 </div>
 
-<div><h6 style="text-align: center;"> Mantenimientos del mes de {{obtenerNombreMes(mes)}} del año {{anio}}</h6></div>
+<div>
+  <h6 style="text-align: center;"> Mantenimientos del mes de {{obtenerNombreMes(mes)}} del año {{anio}}</h6>
+</div>
 
 <div class="btn-group botonesMenu" role="group" aria-label="Basic example">
-  <button type="button" class="btn  btn-dark" *ngIf="!panelPreventivos" (click)="viewPreventivos()">Preventivos</button>
-  <button type="button" class="btn  btn-light" *ngIf="panelPreventivos" (click)="viewPreventivos()">Preventivos</button>
-  <button type="button" class="btn  btn-dark" *ngIf="!panelMetas" (click)="viewMetas()">Metas</button>
-  <button type="button" class="btn  btn-light" *ngIf="panelMetas" (click)="viewMetas()">Metas</button>
-  <button type="button" class="btn  btn-dark" *ngIf="!panelCorrectivos" (click)="viewCorrectivos()">Correctivos</button>
-  <button type="button" class="btn  btn-light" *ngIf="panelCorrectivos" (click)="viewCorrectivos()">Correctivos</button>
+  <button type="button" class="btn" [ngClass]="panelPreventivos ? 'btn-light' : 'btn-dark'" (click)="viewPreventivos()">
+    Preventivos
+  </button>
+
+  <button type="button" class="btn" [ngClass]="panelMetas ? 'btn-light' : 'btn-dark'" (click)="viewMetas()">
+    Metas
+  </button>
+
+  <button type="button" class="btn" [ngClass]="panelCorrectivos ? 'btn-light' : 'btn-dark'" (click)="viewCorrectivos()">
+    Correctivos
+  </button>
 </div>
 
 <div style="margin-top: 1%;">
@@ -118,9 +124,200 @@
     </div>
   </div>
 
-  <div class="panelMantenimientos" style="background-color: grey;" *ngIf="panelMetas">
-    <h1>eeeeeeeeeeeee</h1>
+  <div class="panelMantenimientos" *ngIf="panelMetas">
+
+    <div class="contenedor">
+      <div class="izquierda">
+
+        <button type="button" class="btn btn-dark btn-sm" style="width: 100%; margin-bottom: 2%;"
+          (click)="panelRealizadosView()"> Realzados </button>
+        <button type="button" class="btn btn-dark btn-sm" style="width: 100%;" (click)="panelPendientesView()">
+          Pendientes </button>
+
+      </div>
+      <div class="derecha" *ngIf="panelRealizados">
+
+
+        <div class="card">
+      <p-table #dt2 [value]="preventivos" dataKey="id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]"
+        [loading]="loading" [paginator]="true" [tableStyle]="{ 'min-width': '10rem' }"
+        [globalFilterFields]="['equipo.nombres', 'usuario.nombres', 'equipo.serie', 'equipo.placa', 'servicio.nombres']">
+
+        <ng-template #caption>
+          <div class="flex">
+            <p-iconfield iconPosition="left" class="ml-auto">
+              <p-inputicon>
+                <i class="pi pi-search"></i>
+              </p-inputicon>
+              <input pInputText type="text" (input)="onGlobalFilter($event)" placeholder="Búsqueda General" />
+            </p-iconfield>
+          </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width:10%; align-items: center; text-align: center">Nombre</th>
+            <th style="width:10%; align-items: center; text-align: center">Marca</th>
+            <th style="width:10%; align-items: center; text-align: center">Modelo</th>
+            <th style="width:10%; align-items: center; text-align: center">Serie</th>
+            <th style="width:10%; align-items: center; text-align: center">Placa</th>
+            <th style="width:15%; align-items: center; text-align: center">Servicio</th>
+            <th style="width:15%; align-items: center; text-align: center">Ubicacion Especidica</th>
+            <th style="width:15%; align-items: center; text-align: center">Asignado</th>
+            <th style="width:10%; align-items: center; text-align: center">Realizado</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-reporte>
+          <tr *ngIf="reporte.realizado == true">
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{reporte.equipo.nombres}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.marca }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.modelo }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.serie }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.placa }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.servicio.nombres}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.servicio.ubicacion}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.usuario.nombres}} {{reporte.usuario.apellidos}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <button type="button" class="btn btn-success" *ngIf="reporte.realizado">REALIZADO</button>
+              <button type="button" class="btn btn-danger" *ngIf="!reporte.realizado">PENDIENTE</button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="5">No hay Equipos.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+
+
+      </div>
+      <div class="derecha" *ngIf="panelPendientes" style=" background-color: #d1e7dd;">
+
+        <div class="card">
+      <p-table #dt2 [value]="preventivos" dataKey="id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]"
+        [loading]="loading" [paginator]="true" [tableStyle]="{ 'min-width': '10rem' }"
+        [globalFilterFields]="['equipo.nombres', 'usuario.nombres', 'equipo.serie', 'equipo.placa', 'servicio.nombres']">
+
+        <ng-template #caption>
+          <div class="flex">
+            <p-iconfield iconPosition="left" class="ml-auto">
+              <p-inputicon>
+                <i class="pi pi-search"></i>
+              </p-inputicon>
+              <input pInputText type="text" (input)="onGlobalFilter($event)" placeholder="Búsqueda General" />
+            </p-iconfield>
+          </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width:10%; align-items: center; text-align: center">Nombre</th>
+            <th style="width:10%; align-items: center; text-align: center">Marca</th>
+            <th style="width:10%; align-items: center; text-align: center">Modelo</th>
+            <th style="width:10%; align-items: center; text-align: center">Serie</th>
+            <th style="width:10%; align-items: center; text-align: center">Placa</th>
+            <th style="width:15%; align-items: center; text-align: center">Servicio</th>
+            <th style="width:15%; align-items: center; text-align: center">Ubicacion Especidica</th>
+            <th style="width:15%; align-items: center; text-align: center">Asignado</th>
+            <th style="width:10%; align-items: center; text-align: center">Realizado</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-reporte>
+          <tr *ngIf="!reporte.realizado">
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{reporte.equipo.nombres}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.marca }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.modelo }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.serie }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.equipo.placa }}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.servicio.nombres}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.servicio.ubicacion}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <span class="ml-1 vertical-align-middle">
+                {{ reporte.usuario.nombres}} {{reporte.usuario.apellidos}}
+              </span>
+            </td>
+            <td style="text-align: center; align-items: center; text-align: center">
+              <button type="button" class="btn btn-success" *ngIf="reporte.realizado">REALIZADO</button>
+              <button type="button" class="btn btn-danger" *ngIf="!reporte.realizado">PENDIENTE</button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="5">No hay Equipos.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+
+
+      </div>
+    </div>
+
   </div>
+
 
   <div class="panelMantenimientos" style="background-color: white;" *ngIf="panelCorrectivos">
 
