--- a/src/app/Components/userBiomedica/vista-Equipos/equipos-servicio/equipos-servicio.component.html
+++ b/src/app/Components/userBiomedica/vista-Equipos/equipos-servicio/equipos-servicio.component.html
@@ -3,118 +3,81 @@
 </div>
 
 <div style="margin-top: 2%; margin-bottom: 2%;">
-  <h1 style="text-align: center;">EQUIPOS BIOMEDICOS DEL SERVICIO:  {{servicio.nombres}}</h1>
+  <h1 style="text-align: center;">EQUIPOS BIOMEDICOS DEL SERVICIO: {{servicio.nombres}}</h1>
   <h6 style="text-align: center;"> Todos los equipos relacionados en el servicio de {{servicio.nombres}}</h6>
 </div>
 
-<div style="margin-left: 1%; margin-right: 1%; margin-top: 5%;">
-  <div class="card">
-    <p-table #dt2 [value]="equipos" dataKey="id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]" [loading]="loading"
-      [paginator]="true" [globalFilterFields]="['nombres', 'marca', 'modelo', 'serie']"
-      [tableStyle]="{ 'min-width': '10rem' }">
+ <div class="card" style="margin-top: 3%; width: 94%; margin-left: 3%; margin-right: 3%;">
+    <p-table #dt2
+             [value]="equipos"
+             dataKey="id"
+             [paginator]="true"
+             [rows]="10"
+             [rowsPerPageOptions]="[10, 25, 50, 100]"
+             [loading]="loading"
+             [globalFilterFields]="['nombres', 'marca', 'modelo', 'serie', 'ubicacionEspecifica']"
+             [tableStyle]="{ 'min-width': '10rem' }">
 
+      <!-- Filtro -->
+      <ng-template #caption>
+        <div class="flex justify-content-end">
+          <p-iconfield iconPosition="left">
+            <p-inputicon>
+              <i class="pi pi-search"></i>
+            </p-inputicon>
+            <input pInputText type="text" (input)="onGlobalFilter($event)" placeholder="Búsqueda General" />
+          </p-iconfield>
+        </div>
+      </ng-template>
+
+      <!-- Cabecera -->
       <ng-template pTemplate="header">
         <tr>
-          <th style="width:5%;">ID(Hv)</th>
-          <th style="width:10%;">Nombre</th>
-          <th style="width:10%">Marca</th>
-          <th style="width:10%">Modelo</th>
-          <th style="width:10%">Serie</th>
-          <th style="width:10%">Ubicacion Especidica</th>
-          <th style="width:10%">Dias Mtto</th>
-          <th style="width:10%">Meses Mtto</th>
-          <th style="width:10%">Registro</th>
-          <th style="width:10%">Riesgo</th>
-          <th style="width:20%">Reportes</th>
-        </tr>
-        <tr>
-          <th>  </th>
-          <th>
-            <p-columnFilter type="text" field="nombres" placeholder="Buscar" ariaLabel="filtrar nombre" />
-          </th>
-          <th>
-            <p-columnFilter type="text" field="marca" placeholder="Buscar" ariaLabel="Filtrar marca" />
-          </th>
-          <th>
-            <p-columnFilter type="text" field="modelo" placeholder="Buscar" ariaLabel="Filtrar modelo" />
-          </th>
-          <th>
-            <p-columnFilter type="text" field="serie" placeholder="Buscar" ariaLabel="Filtrar serie" />
-          </th>
-          <th>
-          </th>
-          <th>
-          </th>
-          <th>
-          </th>
-          <th>
-          </th>
-          <th>
-          </th>
-          <th>
-          </th>
+          <th style="width:5%">ID(Hv)</th>
+          <th>Nombre</th>
+          <th>Marca</th>
+          <th>Modelo</th>
+          <th>Serie</th>
+          <th>Ubicación Específica</th>
+          <th>Meses Mtto</th>
+          <th>Registro Invima</th>
+          <th>Riesgo</th>
+          <th>Opciones</th>
         </tr>
       </ng-template>
+
+      <!-- Cuerpo -->
       <ng-template pTemplate="body" let-equipo>
         <tr>
-          <td style="text-align: center;">
-            <button type="button" class="btn btn-primary btn-sm">{{equipo.id}}</button>
+          <td class="text-center">
+            <button type="button" class="btn btn-primary btn-sm">{{ equipo.id }}</button>
           </td>
+          <td>{{ equipo.nombres }}</td>
+          <td>{{ equipo.marca }}</td>
+          <td>{{ equipo.modelo }}</td>
+          <td>{{ equipo.serie }}</td>
+          <td>{{ equipo.ubicacionEspecifica }}</td>
+          <td>{{ equipo.periodicidadM }}</td>
+          <td>{{ equipo.registroInvima }}</td>
+          <td>{{ equipo.riesgo }}</td>
           <td>
-            <span class="ml-1 vertical-align-middle">
-              {{ equipo.nombres }}
-            </span>
-          </td>
-          <td>
-            <span class="ml-1 vertical-align-middle">
-              {{ equipo.marca }}
-            </span>
-          </td>
-          <td>
-            <span class="ml-1 vertical-align-middle">
-              {{ equipo.modelo }}
-            </span>
-          </td>
-          <td>
-            <span class="ml-1 vertical-align-middle">
-              {{ equipo.serie }}
-            </span>
-          </td>
-          <td>
-            <span class="ml-1 vertical-align-middle">
-              {{ equipo.ubicacionEspecifica }}
-            </span>
-          </td>
-          <td>
-            <!--- PARA LOS BOTONES DE FUNCIONES -->
-          </td>
-          <td>
-            <!--- PARA LOS BOTONES DE FUNCIONES -->
-          </td>
-          <td>
-            <!--- PARA LOS BOTONES DE FUNCIONES -->
-          </td>
-          <td>
-            <!--- PARA LOS BOTONES DE FUNCIONES -->
-          </td>
-          <td>
-            <!--- PARA LOS BOTONES DE FUNCIONES -->
-            <button type="button" class="btn btn-info btn-sm" style="margin: 1px;"><i class="bi bi-eye"></i></button>
-            <button type="button" class="btn btn-primary btn-sm" style="margin: 1px;"><i class="bi bi-file-earmark-plus"></i></button>
-            <button type="button" class="btn btn-warning btn-sm" style="margin: 1px;"><i class="bi bi-pencil-square"></i></button>
+            <p-splitbutton label="HV"
+                           icon="pi pi-check"
+                           dropdownIcon="pi pi-cog"
+                           [model]="equipo.opcionesHV"
+                           severity="secondary"
+                           (onClick)="equipo.opcionesHV[1].command(equipo)">
+            </p-splitbutton>
           </td>
         </tr>
       </ng-template>
+
+      <!-- Mensaje vacío -->
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="5">No hay Equipos.</td>
+          <td colspan="10" class="text-center">No hay Equipos.</td>
         </tr>
       </ng-template>
     </p-table>
   </div>
-</div>
-<div>
-  <h1></h1>
-</div>
-
 
