--- a/src/app/Components/userBiomedica/actividades-metrologicas/actividades-metrologicas.component.html
+++ b/src/app/Components/userBiomedica/actividades-metrologicas/actividades-metrologicas.component.html
@@ -104,7 +104,7 @@
             </td>
             <td style="text-align: center; align-items: center; text-align: center">
               <span class="ml-1 vertical-align-middle">
-                {{ reporte.usuarioAprobo.nombres}} {{reporte.usuarioAprobo.apellidos}}
+                {{ reporte.usuarioAprobo?.nombres}} {{reporte.usuarioAprobo?.apellidos}}
               </span>
             </td>
             <td style="text-align: center; align-items: center; text-align: center">
@@ -205,7 +205,7 @@
                 </td>
                 <td style="text-align: center; align-items: center; text-align: center">
                   <span class="ml-1 vertical-align-middle">
-                    {{ reporte.usuarioAprobo.nombres}} {{reporte.usuarioAprobo.apellidos}}
+                    {{ reporte.usuarioAprobo?.nombres}} {{reporte.usuarioAprobo?.apellidos}}
                   </span>
                 </td>
                 <td style="text-align: center; align-items: center; text-align: center">
@@ -295,7 +295,7 @@
                 </td>
                 <td style="text-align: center; align-items: center; text-align: center">
                   <span class="ml-1 vertical-align-middle">
-                    {{ reporte.usuarioAprobo.nombres}} {{reporte.usuarioAprobo.apellidos}}
+                    {{ reporte.usuarioAprobo?.nombres}} {{reporte.usuarioAprobo?.apellidos}}
                   </span>
                 </td>
                 <td style="text-align: center; align-items: center; text-align: center">
